--- a/data/book.yml
+++ b/data/book.yml
@@ -1,6 +1,6 @@
 ---
-title: Franklin
-author: You
+title: Turnkey Math
+author: Carina Mata
 github_url: https://github.com/yourname/example-book
 domain: http://yourname.github.io/example-book
 license_name: Attribution-ShareAlike
